--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ static
 static/*
 db.sqlite3
 secret_key.py
+app/migrations/
 
 # Sphinx documentation
 docs/_build/
@@ -66,4 +67,5 @@ target/
 
 # vim
 *.swp
+
 
